# prepper

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  ruff.toml
.github/workflows/: python-publish.yml  python-test.yml
hooks/: generate_init.py
prepper/: __init__.py  __init__.pyi  caching.py  enums.py  exceptions.py  exportable.py  io_handlers.py  utils.py
prepper/tests/: __init__.py  __init__.pyi  test_IO.py  test_decorators.py  test_export_import.py
typings/periodictable/: __init__.pyi  activation.pyi  chemicals.pyi  constants.pyi  core.pyi  covalent_radius.pyi  cromermann.pyi  crystal_structure.pyi  density.pyi  fasta.pyi  formulas.pyi  magnetic_ff.pyi  mass.pyi  nsf.pyi  nsf_resonances.pyi  nsf_tables.pyi  plot.pyi  util.pyi  xsf.pyi
